UE-263: Add spacing and some small fixups

--- a/src/scss/components/fat-footer/_footer--column-one.scss
+++ b/src/scss/components/fat-footer/_footer--column-one.scss
@@ -2,20 +2,33 @@
 
 /* First Column Styles */
 .vpue-fat-footer {
-
-    &__lockup-wordmark {
-        color: #fff;
+    .vpue-fat-footer__logo {
+        @include modular-spacing('padding-top', 4);
+        @include modular-spacing('padding-left', 4);
     }
 
-    &__lockup-line1 {
-        color: #fff;
+    .vpue-fat-footer__address {
+        @include modular-spacing('padding-bottom', 2);
+        font-size: 1.8rem;
+    
+        .address {
+          margin-bottom: 0; // to create consistent spacing added around the section
+        }
     }
 
-    &__lockup-line5 {
-        color: #fff;
-    }
+    .vpue-fat-footer__contact {
+        @include modular-spacing('padding-bottom', 2);
 
-    &__contact {
-        padding-bottom: 3rem;
+        .contact-line1 {
+            font-size: 2.5rem;
+        }
+
+        .contact-email {
+            font-weight: bold;
+        }
+    }
+    
+    .vpue-fat-footer__social-links {
+      padding-left: 2px; // needed for tabbing experience
     }
 }
