--- a/src/scss/components/fat-footer/_footer.scss
+++ b/src/scss/components/fat-footer/_footer.scss
@@ -10,25 +10,45 @@
         background: linear-gradient(270deg, #DAD7CB 0%, rgba(218, 213, 201, 0.9166) 27.09%, rgba(218, 207, 194, 0.8866) 36.85%, rgba(219, 196, 183, 0.8652) 43.81%, rgba(220, 180, 166, 0.8479) 49.44%, rgba(220, 160, 144, 0.8331) 54.26%, rgba(222, 134, 116, 0.8199) 58.52%, rgba(223, 105, 85, 0.8084) 62.28%, rgba(224, 79, 57, 0.8) 65%, #8F993E 75%, rgba(39, 153, 137, 0.8) 85%, rgba(98, 0, 89, 0.8) 100%);
     }
 
-    &__lockup {
+    .vpue-fat-footer__header {
+        padding-top: 0;
+    }
+
+    .vpue-fat-footer__lockup {
         width: 100%;
-        padding-bottom: 2rem;
+        @include modular-spacing('padding-bottom', 2);
+
+        .su-lockup__cell2 {
+            border-left: 1px solid #fff;
+        }
+
+        .vpue-fat-footer__lockup-wordmark {
+            color: #fff;
+        }
+    
+        .vpue-fat-footer__lockup-line1 {
+            color: #fff;
+        }
+    
+        .vpue-fat-footer__lockup-line5 {
+            color: #fff;
+        }
     }
     
-    &__columns {
+    .vpue-fat-footer__columns {
+        @include modular-spacing('padding-top', 2);
 
-        // @include modular-spacing('padding-top', 4);
-        grid-template-areas: "A B";
-    
-        @include grid-media-min('md') { // 1200px
+        @include grid-media-min('md') { // 768px
           -ms-grid-columns: 3fr 5fr;
           grid-template-columns: 3fr 5fr;
           grid-column-gap: 60px;
         }
+
         @include grid-media-min('xl') { // 1200px
           -ms-grid-columns: 3fr 6fr;
           grid-template-columns: 3fr 6fr;
           grid-column-gap: 90px;
+          grid-template-areas: "A B";
         }
     }
 }
